# learning-rust

./: Cargo.toml  README.md
christmas-song/: Cargo.toml
cli-game-of-life/: Cargo.toml
cli-game-of-life/src/: game.rs  main.rs
closures-demo/: Cargo.toml
closures-demo/src/: lib.rs
deadlocks-demo/: Cargo.toml
deadlocks-demo/src/: lib.rs
employee-management/: Cargo.toml
evaluation/: Cargo.toml
evaluation/src/: lib.rs
lifetime-annotations-test/: Cargo.toml
minigrep/src/: lib.rs
oo-design-patterns/: Cargo.toml
oo-design-patterns/src/: lib.rs
piglatinize/: Cargo.toml
piglatinize/src/: lib.rs
portal/: Cargo.toml
portal/src/: main.rs
rust-adventure/: introducing-rust.md  working-with-environment-ariables.md
src/: christmas_song.rs  evaluation.rs  fibonacci.rs  main.rs  piglatinize.rs  tarait_bounds_test.rs  temperature.rs
src/christmas_song/: mod.rs
src/employee_management/: mod.rs
src/lifetime_annotations_test/: mod.rs
src/minigrep/: mod.rs
tarait-bounds-test/: Cargo.toml
tarait-bounds-test/src/: lib.rs
weather-cli/: Cargo.toml
weather-cli/src/: aqi-response.json  main.rs
web-server/: hello.html
web-server/src/: lib.rs
