[workspace]

members = [
    "christmas-song",
    "closures-demo",
    "deadlocks-demo",
    "employee-management",
    "evaluation",
    "fibonacci",
    "lifetime-annotations-test",
    "minigrep",
    "oo-design-patterns",
    "piglatinize",
    "portal",
    "tarait-bounds-test",
    "temperature",
]