[workspace]

members = [
    "cli-game-of-life",
    "christmas-song",
    "closures-demo",
    "deadlocks-demo",
    "employee-management",
    "evaluation",
    "fibonacci",
    "lifetime-annotations-test",
    "minigrep",
    "oo-design-patterns",
    "piglatinize",
    "portal",
    "tarait-bounds-test",
    "temperature",
    "web-server",
    "weather-cli"
]