[package]
name = "weather-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
exitfailure = "0.5.0"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.114"
reqwest = {version = "0.11.3", features = ["json", "blocking"]}
tokio = {version = "1", features = ["full"]}